--- a/Day1/package.json
+++ b/Day1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "execute": "ts-node app.ts"
+    "execute": "ts-node Home_v1.ts"
   },
   "author": "",
   "license": "ISC",
